# macro-argentina-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
src/macro_argentina_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/macro_dashboard/: config.py
src/macro_dashboard/data/clients/: bcra_client.py
tests/: test_clients.py
